# modern-beep

./: .gitignore  Cargo.toml  README.md  example.beep.yaml
.github/workflows/: build.yml
src/: main.rs
