[package]
name = "modern-beep"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "beep"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rodio = "0.17"
cpal = "0.15"
dasp_sample = "0.11"
anyhow = "1.0"
dirs = "5.0"
serde_json = "1.0"